[tool.poetry]
name = "api-lets-do-it"
version = "0.1.0"
description = ""
authors = ["Elena Vorobyeva <elvorob@gmail.com>"]
readme = "README.md"
#packages = [{include = "api_lets_do_it"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.0"
selenium = "^4.7.2"
requests = "^2.28.1"
black = "^22.12.0"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

